--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
   #grid{
     display: grid;
     grid-template-columns: 150px 1fr;
+    border-bottom: 1px solid gray;
   }
   #grid ol{
     padding-left: 33px;
